2007-03-07  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Makefile (OTHER, REMOVE): Removed options.C and options.h.

2007-03-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* output.C, output.h: New utility submodel.
	* Makefile (OTHER): Add it.

	* toplevel.C, toplevel.h: New submodel.
	* Makefile (SUBMODEL): Add it.
	* main.C (main): Use it.

2007-03-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* scope.C (identifier, has_identifier): New virtual members.
	* scope_block.C, scope_block.h: Define them.
	* block.C, log_extern.C: Use them.

	* scope_block.C, scope_block.h: New utility.
	* Makefile (OTHER): Add it.
	* block.C, log_extern.C: Use it.
	
2007-03-01  Per Abrahamsen  <abraham@dina.kvl.dk>
	
	* scope_id.C, scope_id.h: New utility.
	* Makefile (OTHER): Add it.
	* xysource_loop.C, select.C: Use it.

	* scope.h (all_numbers): New abstract member.
	* scope.C (ScopeNull): Implement it.
	* block.C (ScopeBlock): Implement it.
	* number_lisp.C (NumberLet): Implement it.
	* select.C (ScopeX): Implement it.
	* log_extern.C (LogExtern): Implement it.

	* select.h (type): New virtual member function.

	* cdaisy.C, cdaisy.h (daisy_scope_extern_size)
	(daisy_scope_extern_get): New functions.
	(daisy_scope_find_extern): Removed.
	* log_extern.C (extern_scope_size, extern_scope_get): New functions.
	(find_extern_scope): Removed.

2007-02-27  Mikkel Mollerup  <mmo@life.ku.dk>

	* groundwater_flux.C: New model.

2007-02-26  Per Abrahamsen  <abraham@dina.kvl.dk>

	* surface.C: Replaced 'lake' with 'forced_pressure'.

2007-02-15  Per Abrahamsen  <abraham@dina.kvl.dk>

	* geometry.h (cell_volume): Renamed from 'volume'.

2007-02-13  Per Abrahamsen  <abraham@dina.kvl.dk>

	* time.C (output): Log 'minute' and 'second'.

2007-02-12  Per Abrahamsen  <abraham@dina.kvl.dk>

	* geometry_rect.h (corner_size, corner_rows, corner_columns): 
	(corner_index, corner_z, corner_x):
	(cell_corners, edge_corners): New and data members.
	* geometry_rect.C (GeometryRect::GeometryRect): Initialized.
